syntax = "proto3";
package albums;
import "google/protobuf/any.proto";
import "base.proto";
import "file.proto";
service AlbumService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryAlbum) returns (GetListResponse) {}
  rpc create(Album) returns (GetOneResponse) {}
  rpc update(Album) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message Album {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
  optional int32 profileId = 8;
  optional int32 companyId = 9;
  repeated File images = 10;
}
message QueryAlbum {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string name = 11;
  optional int32 profileId = 12;
  optional int32 companyId = 13;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated Album data = 6;
}

message GetOneResponse {
  string message = 1;
  optional Album data = 2;
}